# anthropic-computer-use

./: .gitignore  CODEOWNERS  LICENSE  README.md  start.sh
computer_use_demo/: DesktopSandbox.py  loop.py  pyproject.toml  streamlit.py
computer_use_demo/tools/: bash.py  computer.py  edit.py
