[tool.poetry]
name = "computer-use-demo"
version = "0.1.0"
description = ""
authors = ["James Murdza <james@jamesmurdza.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = ">=1.38.0"
anthropic = {version = ">=0.37.1", extras = ["bedrock", "vertex"]}
jsonschema = "4.22.0"
boto3 = ">=1.28.57"
google-auth = ">=2,<3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
